# bindfetto

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  install.sh  release.sh
app/: .gitignore  README.md
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/bindfetto/control/: ControlClient.kt  MainActivity.kt
bindfetto-app/app/: build.gradle.kts
bindfetto-app/app/src/main/java/com/bindfetto/control/: MainActivity.kt
catalog/: README.md  bindfetto_catalog.py
catalog/tests/: test_builder.py
catalog/tests/fixtures/: IActivityManager.aidl  ITricky.aidl
decode/: README.md
docs/: presentation.html
plugins/dlt/: CMakeLists.txt  README.md  bindfettodecoderplugin.h  bindfettodecoderplugin.json
plugins/vscode/: .gitignore  .vscodeignore  README.md  package.json  tsconfig.json
plugins/vscode/scripts/: smoke.mjs
plugins/vscode/src/: decoder.ts  extension.ts
plugins/vscode/wasm/: Cargo.toml
plugins/vscode/wasm/src/: lib.rs
runtime/: Cargo.toml  README.md  rust-toolchain.toml
runtime/bindfetto/: Cargo.toml  build.rs
runtime/bindfetto-common/: Cargo.toml
runtime/bindfetto-common/src/: lib.rs
runtime/bindfetto-core/src/: lib.rs
runtime/bindfetto-ebpf/: Cargo.toml
runtime/bindfetto-ebpf/src/: main.rs
runtime/bindfetto/src/: main.rs
